--- a/EclipseWS/Clockface/res/layout/widget_clockface.xml
+++ b/EclipseWS/Clockface/res/layout/widget_clockface.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     
-<ImageView
-    android:id="@+id/imageClock" xmlns:android="http://schemas.android.com/apk/res/android"
+<AnalogClock xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/clockView" 
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
-   	android:scaleType="centerInside"
-   	android:background="#DBD6DA"
+   	android:dial="@drawable/clockface_48_face"
+   	android:hand_hour="@drawable/clockface_48_hour"
+   	android:hand_minute="@drawable/clockface_48_min"
    />
 	    
 
