Renamed current widget to clockface_81

--- a/EclipseWS/Clockface/res/xml/clockface_widget_info_81_2_2.xml
+++ b/EclipseWS/Clockface/res/xml/clockface_widget_info_81_2_2.xml
@@ -4,7 +4,7 @@
     android:minWidth="144dp"
     android:minHeight="144dp"
     android:updatePeriodMillis="86400000"
-    android:initialLayout="@layout/widget_clockface"
+    android:initialLayout="@layout/widget_clockface_81"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen"
     >
