--- a/EclipseWS/Clockface/res/layout/activity_setup.xml
+++ b/EclipseWS/Clockface/res/layout/activity_setup.xml
@@ -12,5 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+    
+    <Button
+        android:id="@+id/buttonCrash" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="Crash"
+        
+        />
 
 </RelativeLayout>
